# game-of-life

./: .gitignore  CMakeLists.txt  Makefile  README.md  game.cpp  game.h  gof.cpp  gof.h  gofl.cpp  gofl.h  main.cpp  view.cpp  view.h
